--- a/views/public/html/LIBAI-contract.html
+++ b/views/public/html/LIBAI-contract.html
@@ -128,7 +128,9 @@ u+.body .list_block ol {
 </head>
 
 <body class="body" style="background-color: #ffffff; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
-<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;margin-top: 150px;">
+	<div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
+
+<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
 <tbody>
     <tr>
         <td>
@@ -499,7 +501,7 @@ u+.body .list_block ol {
 
 	<tr>
 		<td width="708" height="51" valign="top" style="border: none; padding: 0in">
-			<ol start="2"><li><p align="left" style="orphans: 0; widows: 0"><font face="Calibri, serif"><font size="2" style="font-size: 10pt"><font color="#000000"><font face="Arial Narrow, serif"><font size="1" style="font-size: 7pt">The
+			<ol start="2" style="font-size: 8px;line-height: 0%;"><li><p align="left" style="orphans: 0; widows: 0"><font face="Calibri, serif"><font size="2" style="font-size: 10pt"><font color="#000000"><font face="Arial Narrow, serif"><font size="1" style="font-size: 7pt">The
 				wage and allowance elements in this form are machine printed. any
 				additions or alterations to those elements require the initials
 				of the Seafarer and the Owner's authorized agent(s).</font></font></font></font></font></p></li>
@@ -543,8 +545,8 @@ u+.body .list_block ol {
 					<td rowspan="2" colspan="2" width="431" style="border-top: none; border-bottom: none; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0in; padding-left: 0.08in; padding-right: 0in"><p class="western" align="justify" style="orphans: 0; widows: 0; margin-bottom: 0.14in">
 						<font face="Calibri, serif"><font size="2" style="font-size: 10pt"><font face="Arial Narrow, serif"><font size="1" style="font-size: 7pt"><b>The
 						Seafarer:</b></font></font></font></font></p>
-						<p class="western" align="justify" style="orphans: 0; widows: 0">
-						<font face="Calibri, serif"><font size="2" style="font-size: 10pt"><font face="Arial Narrow, serif"><font size="1" style="font-size: 5pt"><i>I
+						<p style="line-height: 8px;" align="justify" style="orphans: 0; widows: 0">
+						<font face="Calibri, serif"><font size="2" style="font-size: 10pt;line-height: 0%;"><font face="Arial Narrow, serif"><font size="1" style="font-size: 5pt"><i>I
 						hereby declare that the above facts and information are true
 						and accurate. I acknowledge and accept that (i) the owners of
 						any vessel on which I may be assigned from time to time and
@@ -585,22 +587,13 @@ u+.body .list_block ol {
 						<br/>
 
 						</p>
-						<p class="western" align="left" style="orphans: 2; widows: 2"><br/>
-
-						</p>
-						<p class="western" align="left" style="orphans: 2; widows: 2"><font face="Calibri, serif"><font size="2" style="font-size: 10pt"><font color="#000000"><font face="Arial Narrow, serif"><font size="2" style="font-size: 9pt">Place:
-						<input type="text" style="border: none;"></font></font></font></font></font></p>
+					
 					</td>
 					<td width="183" style="border-top: none; border-bottom: none; border-left: none; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0in; padding-left: 0in; padding-right: 0.08in"><p class="western" align="left" style="orphans: 2; widows: 2">
 						<br/>
 
 						</p>
-						<p class="western" align="left" style="orphans: 2; widows: 2"><br/>
-
-						</p>
-						<p class="western" align="left" style="orphans: 2; widows: 2"><br/>
-
-						</p>
+				
 					</td>
 				</tr>
 				<tr>
@@ -661,6 +654,8 @@ u+.body .list_block ol {
 		</td>
 	</tr>
 </table>
+<div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
+
 <p class="western" align="center" style="line-height: 115%; orphans: 2; widows: 2; margin-bottom: 0.14in; page-break-before: always">
 <font face="Calibri, serif"><font size="2" style="font-size: 11pt"><font face="Arial Narrow, serif"><font size="3" style="font-size: 12pt"><b>SEAFARER
 EMPLOYMENT AGREEMENT</b></font></font></font></font></p>
