--- a/views/public/html/NEGMAR-contract.html
+++ b/views/public/html/NEGMAR-contract.html
@@ -126,9 +126,11 @@ u+.body .list_block ol {
 }
 </style><!--[if mso ]><style>sup, sub { font-size: 100% !important; } sup { mso-text-raise:10% } sub { mso-text-raise:-10% }</style> <![endif]-->
 </head>
+<body>
+    <div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
 
-<div>
-    <table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;margin-top: 150px;">
+    <div>
+    <table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
         <tbody>
             <tr>
                 <td>
@@ -654,7 +656,7 @@ u+.body .list_block ol {
     </table>
                     </div>
 </div>
-<br style="page-break-before:always; clear:both; mso-break-type:section-break" >
+<div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
 <div class="page-break"></div>
 <div>
     <p style="margin-top:150px; text-align: center; font-size:12pt">
