update contact design.

--- a/views/public/html/JSWINFRA-contract.html
+++ b/views/public/html/JSWINFRA-contract.html
@@ -119,9 +119,7 @@
 	<body class="body" style="background-color: #ffffff; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
 		<div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
 
-		<div style="margin-top: 0px;">
-			
-		</div>
+		
 		<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
 			<tbody>
 				<tr>
@@ -672,7 +670,7 @@
 
 						<div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
 						<div class="page-break" ></div>
-
+<div style="margin-left: 30px;margin-right: 30px;">
 					<table class="row row-12" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;margin-top: 150px;">
 						<tbody>
 							<tr>
@@ -1291,6 +1289,7 @@
 			</tr>
 		</tbody>
 	</table><!-- End -->
+	
 
     <button class="print-button" onclick="printPage()">Print Form</button>
 
