--- a/views/public/html/SCLMERCURY-contract.html
+++ b/views/public/html/SCLMERCURY-contract.html
@@ -16,7 +16,7 @@
                 display: none; /* Hide print button when printing */
             }
         }
-			body {  font-family:Calibri; font-size:11pt }
+			body {  font-family:Calibri; font-size:10px }
 			
 
 @media print {
@@ -50,22 +50,23 @@
 				<div style="font-size: 10.5pt;"><span style="font-family: 'Arial Narrow';">5-38, 60, Paya Lebar Road, Singapore 409051 Singapore</span></div>
 				<div style="font-size: 10.5pt;"><span style="font-family: 'Arial Narrow';">the owner of the vessel below stated and the employer herein (the “Shipowner”)</span></div>
 				<div style="font-size: 10.5pt;"><span style="font-family: 'Arial Narrow';">AND</span></div>
+				
 			</div>
-			<table cellspacing="0" cellpadding="0" class="TableGrid" style="width:100%; max-width: 558.25pt; border-collapse:collapse;font-size: 12px;">
+			<table cellspacing="0" cellpadding="0" class="TableGrid" style="width:100%; max-width: 558.25pt; border-collapse:collapse;font-size: 10px;">
 				<tr style="height:10.9pt">
 					<td colspan="2" style="width:125.1pt;">
-						<span style="font-family:'Arial Narrow'; font-size:11pt;">Full Name :</span>
+						<span style="font-family:'Arial Narrow'; font-size:10px;">Full Name :</span>
 					</td>
 					<td colspan="7" style="width:275.7pt;">
 						<input type="text" id="fullName" style="border: none; width: 100%;">
 					</td>
 					<td colspan="2" style="width:125.05pt;">
-						<span style="font-size:11pt; margin-left:36.6pt;">(the “Seafarer”)</span>
+						<span style="font-size:10px; margin-left:36.6pt;">(the “Seafarer”)</span>
 					</td>
 				</tr>
 				<tr style="height:13.9pt">
 					<td colspan="2" style="width:125.1pt;">
-						<span style="font-family:'Arial Narrow'; font-size:11pt;">Date and Place of Birth :</span>
+						<span style="font-family:'Arial Narrow'; font-size:10px;">Date and Place of Birth :</span>
 					</td>
 					<td colspan="9" style="width:411.55pt;">
 						<input type="text" id="dob" style="border: none; width: 100%;">
@@ -73,49 +74,49 @@
 				</tr>
 				<tr style="height:13.9pt">
 					<td colspan="2" style="width:125.1pt;">
-						<span style="font-family:'Arial Narrow'; font-size:11pt;">Passport Details:</span>
+						<span style="font-family:'Arial Narrow'; font-size:10px;">Passport Details:</span>
 					</td>
 					<td colspan="3" style="width:128.2pt;">
 						<input type="text" style="border: none; width: 100%;">
 					</td>
 					<td colspan="6" style="width:283.35pt;">
-						<span style="font-family:'Arial Narrow'; font-size:11pt;">Issued on:</span>
+						<span style="font-family:'Arial Narrow'; font-size:10px;">Issued on:</span>
 						<input type="text" style="border: none; width: 30%; display: inline-block;">
-						<span style="font-family:'Arial Narrow'; font-size:11pt;">At:</span>
+						<span style="font-family:'Arial Narrow'; font-size:10px;">At:</span>
 						<input type="text" style="border: none; width: 30%; display: inline-block;">
 					</td>
 				</tr>
 				<tr style="height:4pt">
 					<td colspan="2" style="width:125.1pt;">
-						<span style="font-family:'Arial Narrow'; font-size:11pt;">Seaman's Book Details:</span>
+						<span style="font-family:'Arial Narrow'; font-size:10px;">Seaman's Book Details:</span>
 					</td>
 					<td colspan="3" style="width:128.2pt;">
 						<input type="text" style="border: none; width: 100%;">
 					</td>
 					<td colspan="6" style="width:283.35pt;">
-						<span style="font-family:'Arial Narrow'; font-size:11pt;">Issued on:</span>
+						<span style="font-family:'Arial Narrow'; font-size:10px;">Issued on:</span>
 						<input type="text" style="border: none; width: 30%; display: inline-block;">
-						<span style="font-family:'Arial Narrow'; font-size:11pt;">At:</span>
+						<span style="font-family:'Arial Narrow'; font-size:10px;">At:</span>
 						<input type="text" style="border: none; width: 30%; display: inline-block;">
 					</td>
 				</tr>
 				<tr style="height:13.9pt">
 					<td colspan="2" style="width:125.1pt;">
-						<span style="font-family:'Arial Narrow'; font-size:11pt;">Cert. of Competency:</span>
+						<span style="font-family:'Arial Narrow'; font-size:10px;">Cert. of Competency:</span>
 					</td>
 					<td colspan="3" style="width:128.2pt;">
 						<input type="text" style="border: none; width: 100%;">
 					</td>
 					<td colspan="6" style="width:283.35pt;">
-						<span style="font-family:'Arial Narrow'; font-size:11pt;">Issued on:</span>
+						<span style="font-family:'Arial Narrow'; font-size:10px;">Issued on:</span>
 						<input type="text" style="border: none; width: 30%; display: inline-block;">
-						<span style="font-family:'Arial Narrow'; font-size:11pt;">At:</span>
+						<span style="font-family:'Arial Narrow'; font-size:10px;">At:</span>
 						<input type="text" style="border: none; width: 30%; display: inline-block;">
 					</td>
 				</tr>
 				<tr style="height:13.9pt">
 					<td colspan="2" style="width:125.1pt;">
-						<span style="font-family:'Arial Narrow'; font-size:11pt;">Joining Port:</span>
+						<span style="font-family:'Arial Narrow'; font-size:10px;">Joining Port:</span>
 					</td>
 					<td colspan="9" style="width:411.55pt;">
 						<input type="text" style="border: none; width: 100%;">
@@ -240,27 +241,25 @@
 						<p style="margin-top:0pt; ;  text-indent:-35.1pt;  widows:0; orphans:0; font-size:7pt;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
 						<p style="margin-top:0pt; ;  text-indent:-35.1pt;  widows:0; orphans:0; font-size:7pt;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
 						<p style="margin-top:0pt; ;  text-indent:-35.1pt;  widows:0; orphans:0; font-size:7pt;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
-						<p style="margin-top:0pt; ;  text-indent:-35.1pt;  widows:0; orphans:0; font-size:7pt;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
-						<p style="margin-top:0pt; ;  text-indent:-35.1pt;  widows:0; orphans:0; font-size:7pt;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
-						<p style="margin-top:0pt; ;  text-indent:-35.1pt;  widows:0; orphans:0; font-size:7pt;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
+		
+						<span>Place :<input type="text" style="border: none;"></span>
+				<div>Date : <input type="date" style="border: none;"></div>
 					</td>
 					<td rowspan="2" style="width:321.55pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.4pt; padding-left:5.03pt; ">
 						<p style="margin-top:0pt;  text-align:justify;  widows:0; orphans:0; font-size:7pt;"><span style="font-family:'Arial Narrow';">The Seafarer:</span></p>
 						<p style="margin-top:0pt; margin-bottom:6pt; text-align:justify; widows:0; orphans:0; font-size:5pt;"><span style="font-family:'Arial Narrow';">I hereby declare that the above facts and information are true and accurate. I acknowledge and accept that (i) the owners of any vessel on which I may be assigned from time to time and (ii) the Managers and any direct or indirect parent or subsidiary or associated or affiliated company of the Managers (together the &ldquo;Companies&rdquo;) may each process my personal data (including any of my personal data that is provided to any of the Companies at a later date) for the following purposes:(a) administering my employment, or my application therefor, including with respect to personal and pensions administration, employee management; (b) as required to comply with any laws, regulations or contracts applicable to any of the Companies or their businesses and in accordance with any applicable limitation periods;(c) where necessary to protect my vital interests; and(d) as otherwise indicated in the Managers&rsquo; data protection policy, as notified to me by the Managers in writing, on or before commencement of my employment and thereafter whenever the data protection policy is updated from time to time. I understand that my personal data will be stored in the Managers&rsquo; database and otherwise processed for the above purposes, in connection with, and during the period of my current period of employment and thereafter for such further period (if any) as is necessary to fulfil the abovementioned purposes. I also understand that the abovementioned processing activities may involve the transfer of my personal data from the Managers to any of the other Companies. This may involve the transfer of my personal data to jurisdictions whose data protection laws do not provide equivalent protection to my home country subject to the Companies taking appropriate measures to ensure that my personal data is kept secure at all times. To the extent that my personal data includes sensitive personal data, I consent to the Managers processing such sensitive personal data as stated above.</span></p>
-						<p style="margin-top:0pt; margin-bottom:6pt; widows:0; orphans:0; font-size:11pt;"><strong><span style="font-family:'Arial Narrow'; font-size:8pt;">Seafarer&rsquo;s Name:</span></strong><span style="font-family:'Arial Narrow'; font-size:8pt;">&nbsp;&nbsp;</span><span style="font-family:'Arial Narrow';">&nbsp;</span><span style="font-family:'Arial Narrow'; font-size:9.5pt;"><span><input type="text" style="border: none;" ></span></span><br><br><strong><span style="font-family:'Arial Narrow'; font-size:8pt;">Signature: <span><input type="text" style="border: none;" ></span></span></strong></p>
+						<p style="margin-top:0pt; margin-bottom:6pt; widows:0; orphans:0; font-size:10px;"><strong><span style="font-family:'Arial Narrow'; font-size:8pt;">Seafarer&rsquo;s Name:</span></strong><span style="font-family:'Arial Narrow'; font-size:8pt;">&nbsp;&nbsp;</span><span style="font-family:'Arial Narrow';">&nbsp;</span><span style="font-family:'Arial Narrow'; font-size:9.5pt;"><span><input type="text" style="border: none;" ></span></span><br><br><strong><span style="font-family:'Arial Narrow'; font-size:8pt;">Signature: <span><input type="text" style="border: none;" ></span></span></strong></p>
 					</td>
 				</tr>
-				<tr >
-					<td style="width:66.2pt; ">
-						<p style="margin-top:0pt; margin-bottom:0pt; font-size:9pt;"><strong><span style="font-family:'Arial Narrow';">Place:&nbsp;</span></strong><span style="font-family:'Arial Narrow';"><span><input type="text" style="border: none;" ></span></span><br><strong><span style="font-family:'Arial Narrow';">Date:</span></strong><strong><span style="font-family:'Arial Narrow';">&nbsp;&nbsp;&nbsp;</span></strong><strong><span style="font-family:'Arial Narrow';"><span><input type="text" style="border: none;" ></span></span></strong></p>
-					</td>
 				
-				</tr>
 			</tbody>
+			
 		</table>
+		</div>
 		<div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
 
-		<div clasx`s="page-break"> </div>
+		<div class="page-break"> </div>
+		<div style="margin-left: 30px;margin-right: 30px;">
 			<h4 style="text-align: center;font-family: Arial, Helvetica, sans-serif;">SEAFARERS EMPLOYMENT AGREEMENT</h4>
 			<p style="text-align:center;  font-size:12pt">
 				<span style="font-family:'Arial Narrow'">[Terms and Conditions]</span>
@@ -1069,7 +1068,7 @@
 			<p style=" margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt">
 				<span style="font-family:'Arial Narrow'">&#xa0;</span>
 			</p>
-			<p class="BodyText" style="margin-right:6.15pt; text-indent:7.1pt; text-align:justify; font-size:11pt">
+			<p class="BodyText" style="margin-right:6.15pt; text-indent:7.1pt; text-align:justify; font-size:10px">
 				<strong><u><span style="font-family:'Arial Narrow'; ">19. PIRATES and ARMED ROBBERY:</span></u></strong>
 			</p>
 			<p class="BodyText" style="margin-right:6.15pt; t; text-align:justify; font-size:10pt">
@@ -1081,7 +1080,7 @@
 			<p class="BodyText" style="margin-right:6.15pt; text-align:justify; font-size:10pt">
 				<span style="font-family:'Arial Narrow'">&#xa0;</span>
 			</p>
-			<p class="Default" style="text-indent:7.1pt; text-align:justify; font-size:11pt">
+			<p class="Default" style="text-indent:7.1pt; text-align:justify; font-size:10px">
 				<strong><u><span style="font-family:'Arial Narrow'; ">20. SERVICE IN WARLIKE OPERATIONS AREAS/HIGH RISK AREAS:</span></u></strong>
 			</p>
 			<p class="Default" style="text-align:justify; font-size:10pt">
@@ -1117,10 +1116,10 @@
 			<p class="Default" style=" text-align:justify; font-size:10pt">
 				<span style="font-family:'Arial Narrow'">as necessary.</span>
 			</p>
-			<p class="Default" style=" text-indent:-7.1pt; text-align:justify; font-size:11pt">
+			<p class="Default" style=" text-indent:-7.1pt; text-align:justify; font-size:10px">
 				<br /><strong><u><span style="font-family:'Arial Narrow'; ">20.INSURANCE:</span></u></strong>
 			</p>
-			<p class="Default" style="text-align:justify; font-size:11pt">
+			<p class="Default" style="text-align:justify; font-size:10px">
 				<strong><span style="font-family:'Arial Narrow'; ">&#xa0;</span></strong>
 			</p>
 			<p class="Default" style=" text-align:justify; font-size:10pt">
@@ -1129,7 +1128,7 @@
 			<p class="Default" style=" text-align:justify; font-size:10pt">
 				<span style="font-family:'Arial Narrow'">&#xa0;</span>
 			</p>
-			<p class="Default" style=" text-align:justify; font-size:11pt">
+			<p class="Default" style=" text-align:justify; font-size:10px">
 				<br /><br /><strong><u><span style="font-family:'Arial Narrow'; ">21. MATERNITY:</span></u></strong>
 			</p>
 			<p class="Default" style=" text-align:justify; font-size:10pt">
@@ -1153,7 +1152,7 @@
 			<p class="Default" style=" text-align:justify; font-size:10pt">
 				<span style="font-family:'Arial Narrow'">&#xa0;</span>
 			</p>
-			<p class="Default" style=" text-align:justify; font-size:11pt">
+			<p class="Default" style=" text-align:justify; font-size:10px">
 				<strong><u><span style="font-family:'Arial Narrow'; ">22. EQUALITY:</span></u></strong>
 			</p>
 			<p class="Default" style=" text-align:justify; font-size:10pt">
