--- a/views/public/html/ETERNALLIGHT-contract.html
+++ b/views/public/html/ETERNALLIGHT-contract.html
@@ -134,7 +134,7 @@ page-break-before: always;
 	</style><!--[if mso ]><style>sup, sub { font-size: 100% !important; } sup { mso-text-raise:10% } sub { mso-text-raise:-10% }</style> <![endif]-->
 </head>
 
-<body class="body" style="background-color: #ffffff; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
+<body class="body" style="background-color: #ffffff; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none; margin-left: 30px;margin-right: 30px ;" >
 	<div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
 
 	<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
@@ -651,7 +651,7 @@ page-break-before: always;
 					<div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
 
                     <div class="page-break"></div>
-					<table class="row row-14" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;margin-top: 150px;">
+					<table class="row row-14" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 						<tbody>
 							<tr>
 								<td>
@@ -833,22 +833,14 @@ page-break-before: always;
 			</tr>
 		</table>
 	</dd></dl>
-	<p class="western" align="justify" style="margin-left: 0.1in"><a name="_GoBack"></a>
-	<br/>
 
-	</p>
-	<p class="western" style="margin-top: 0.16in"><br/>
 
-	</p>
-    <div class="page-break"></div>
 
 	<ol start="4" style="margin-top: 150px;">
 		<li><h2 class="western" align="justify" style="text-indent: 0in"><span style="letter-spacing: -0.2pt">
 		</span>REST<span style="letter-spacing: -0.1pt"> PERIODS:</span></h2></li>
 	</ol>
-	<p class="western" style="margin-top: 0.02in"><br/>
 
-	</p>
 	<ol start="4">
 		<ol>
 			<li><p align="justify" style="margin-top: 0in"><font size="2" style="font-size: 11pt"><font size="2" style="font-size: 10pt">Each</font><font size="2" style="font-size: 10pt"><span style="letter-spacing: -0.4pt">
@@ -966,6 +958,7 @@ page-break-before: always;
 		</ol>
 	</ol>
 </div>
+<div class="page-break"></div>
 <ol start="4">
 	<ol start="5">
 		<li><p align="justify" style="line-height: 0.16in; margin-top: 0.05in;">
@@ -7850,7 +7843,9 @@ The</font><font size="2" style="font-size: 9pt"><span style="letter-spacing: -0.
 </span></font><font size="2" style="font-size: 9pt">to</font><font size="2" style="font-size: 9pt"><span style="letter-spacing: -0.1pt">
 </span></font><font size="2" style="font-size: 9pt">function</font><font size="2" style="font-size: 9pt"><span style="letter-spacing: -0.2pt">
 </span></font><font size="2" style="font-size: 9pt">group</font><font size="2" style="font-size: 9pt"><span style="letter-spacing: -0.2pt">
-</span></font><font size="2" style="font-size: 9pt">4. </font><font size="2" style="font-size: 9pt"><u>Abdominal
+</span></font><font size="2" style="font-size: 9pt">4. </font><font size="2" style="font-size: 9pt">
+	<div class="page-break"></div>
+	<u>Abdominal
 Cavity and Pelvis</u></font></font></p>
 <dl><dd>
 	<table width="643" cellpadding="1" cellspacing="0">
