--- a/views/public/html/GARUDA-contract.html
+++ b/views/public/html/GARUDA-contract.html
@@ -109,7 +109,7 @@ u+.body .list_block ol {
 </style><!--[if mso ]><style>sup, sub { font-size: 100% !important; } sup { mso-text-raise:10% } sub { mso-text-raise:-10% }</style> <![endif]-->
 </head>
 
-<body class="body" style="background-color: #ffffff; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
+<body class="body" style="background-color: #ffffff;  padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;margin-left: 30px;margin-right: 30px;">
     <div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
 
 <table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
@@ -571,6 +571,7 @@ u+.body .list_block ol {
 <div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
 
     <div class="page-break"></div>
+    <div style="margin-right: 30px;">
     <p style="margin-top:0pt; margin-bottom:10pt; text-align:center; line-height:115%; font-size:12pt;"><br style=" clear:both;"><strong><span style="font-family:'Arial Narrow';">SEAFARER EMPLOYMENT AGREEMENT</span></strong></p>
     <p style="margin-top:0pt; margin-bottom:10pt; text-align:center; line-height:115%; font-size:12pt;"><strong><span style="font-family:'Arial Narrow';">[Terms and Conditions]</span></strong></p>
     <p style="margin-top:0pt; margin-left:113.4pt; margin-bottom:10pt;"><strong><span style="font-family:'Arial Narrow';">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></strong><strong><span style="width:5.52pt; font-family:'Arial Narrow'; display:inline-block;">&nbsp;</span></strong><strong><span style="width:36pt; font-family:'Arial Narrow'; display:inline-block;">&nbsp;</span></strong><strong><span style="width:36pt; font-family:'Arial Narrow'; display:inline-block;">&nbsp;</span></strong><strong><span style="width:36pt; font-family:'Arial Narrow'; display:inline-block;">&nbsp;</span></strong><strong><span style="font-family:'Arial Narrow';">Between</span></strong></p>
@@ -990,6 +991,9 @@ u+.body .list_block ol {
     <p style="margin-top:0pt; margin-left:7.1pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt;"><span style="font-family:Arial;">&nbsp;</span></p>
     <p style="margin-top:0pt; margin-left:7.1pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt;"><span style="font-family:Arial;">&nbsp;</span></p>
     <p style="margin-top:0pt; margin-left:7.1pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt;"><span style="font-family:Arial;">As an Employer ______________________________</span></p>
+    </div>
+    <div class="page-break"></div>
+    <div style="margin-right: 50px;"> 
     <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt;"><br style=" clear:both;"></p>
     <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt;"><span style="font-family:Arial;">&nbsp;</span></p>
     <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; line-height:normal; font-size:12pt;"><strong><span style="font-family:'Arial Narrow';">EMPLOYER&rsquo;S STANDARD TERMS</span></strong></p>
@@ -3702,6 +3706,7 @@ u+.body .list_block ol {
     <p style="margin:0pt 5.85pt 0pt 14.2pt; line-height:normal; widows:0; orphans:0; font-size:9pt;"><span style="font-family:'Arial Narrow';">FEV 1.0 of over 2 litres corresponds roughly to function group 1, FEV 1.0 of 1.5-2 litres corresponds roughly to function group 2,</span></p>
     <p style="margin:0.05pt 5.85pt 0pt 14.2pt; line-height:normal; widows:0; orphans:0; font-size:9pt;"><span style="font-family:'Arial Narrow';">FEV 1.0 of about 1 litre corresponds roughly to function group 3, and FEV 1.0 of about 0.5 litre corresponds roughly to function group 4.</span></p>
     <p style="margin-top:0pt; margin-right:22.6pt; margin-bottom:0pt; line-height:normal; widows:0; orphans:0; font-size:9pt;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
+    <div class="page-break"></div>
     <p style="margin-top:0.35pt; margin-left:35.45pt; margin-bottom:0pt; text-indent:-21.25pt; line-height:normal; widows:0; orphans:0; font-size:9pt;"><u><span style="font-family:'Arial Narrow';">Abdominal Cavity and Pelvis</span></u></p>
     <p style="margin-top:0pt; margin-right:22.6pt; margin-bottom:0pt; line-height:normal; widows:0; orphans:0; font-size:9pt;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
     <table cellspacing="0" cellpadding="0" style="margin-left: 13.35pt; border: 0.75pt solid rgb(0, 0, 0); border-collapse: collapse; width: 100%;">
