--- a/views/public/html/JSWSHIPPING-contract.html
+++ b/views/public/html/JSWSHIPPING-contract.html
@@ -2,7 +2,7 @@
 <html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" lang="en">
 
 <head>
-	<title>JSW INFRA</title>
+	<title>JSW SHIPPING</title>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     
@@ -666,7 +666,7 @@
                         </tbody>
                     </table>
 					<div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
-
+<div style="margin-left: 30px;margin-right: 30px;">
 
 					<table class="row row-12" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;margin-top: 150px;">
 						<tbody>
