--- a/views/public/html/NEGMAR-contract.html
+++ b/views/public/html/NEGMAR-contract.html
@@ -658,8 +658,9 @@ u+.body .list_block ol {
 </div>
 <div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
 <div class="page-break"></div>
+<div style="margin-left: 50px;margin-right: 50px;">
 <div>
-    <p style="margin-top:150px; text-align: center; font-size:12pt">
+    <p style=" text-align: center; font-size:12pt">
         <strong><span style="font-family:'Arial Narrow'; ">SEAFARER EMPLOYMENT AGREEMENT</span></strong>
     </p>
     <p style="margin-top:0pt; ; text-align:center;  font-size:12pt">
@@ -882,7 +883,8 @@ u+.body .list_block ol {
     <p style="margin-top:0pt; margin-left:7.1pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt">
         <span style="font-family:Arial">&#xa0;</span>
     </p>
-    <p style="margin-top:0pt; margin-left:7.1pt; margin-bottom:0pt; text-align:justify; line-height:normal">
+    <div class="page-break"></div>
+    <p style="margin-top:10pt; margin-left:7.1pt; margin-bottom:0pt; text-align:justify; line-height:normal">
         <strong><u><span style="font-family:Arial; ">09) SEAFARERS PERSONAL EFFECTS:</span></u></strong>
     </p>
     <p style="margin-top:0pt; margin-left:7.1pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt">
@@ -1432,7 +1434,7 @@ u+.body .list_block ol {
     <p style="margin:0pt 6.15pt 0pt 7.1pt; text-align:justify; line-height:normal; widows:0; orphans:0">
         <strong><span style="font-family:Arial; ">&#xa0;</span></strong>
     </p>
-    <p style="margin:0pt 6.15pt 0pt 7.1pt; text-align:justify; line-height:normal; widows:0; orphans:0">
+    <p style="margin:10pt 6.15pt 0pt 7.1pt; text-align:justify; line-height:normal;margin-top: 30px;">
         <strong><u><span style="font-family:Arial; ">19. PIRATES and ARMED ROBBERY:</span></u></strong>
     </p>
     <p style="margin:0pt 6.15pt 0pt 7.1pt; text-align:justify; line-height:normal; widows:0; orphans:0; font-size:10pt">
@@ -1630,6 +1632,7 @@ u+.body .list_block ol {
     <p style="margin-top:0pt; margin-left:7.1pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt">
         <span style="font-family:Arial">As an Employer ______________________________</span>
     </p>
+    <div class="page-break"></div>
     <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; line-height:normal; font-size:12pt">
         <br style="page-break-before:always; clear:both" ><strong><span style="font-family:'Arial Narrow'; ">EMPLOYER’S STANDARD TERMS</span></strong>
     </p>
@@ -1761,7 +1764,9 @@ u+.body .list_block ol {
     <h1 style="margin-top:3.6pt; margin-right:152.35pt; margin-bottom:0pt; page-break-inside:avoid; page-break-after:avoid; line-height:201%; font-size:10pt">
         <span style="font-family:'Arial Narrow'">&#xa0;</span>
     </h1>
-    <h1 style="margin-top:3.6pt; margin-right:152.35pt; margin-bottom:0pt; text-indent:198.45pt; page-break-inside:avoid; page-break-after:avoid; line-height:201%; font-size:10pt">
+    <div class="page-break"></div>
+    <div style="margin-left: 150px;">
+    <h1 style="margin-top:3.6pt; margin-right:152.35pt; margin-bottom:0pt; text-indent:198.45pt; ; line-height:201%; font-size:10pt">
         <u><span style="font-family:'Arial Narrow'; ">COMPENSATION SCALE</span></u>
     </h1>
     <p style="margin-top:0pt; margin-left:35.45pt; margin-bottom:0pt; text-indent:-21.25pt; line-height:normal; widows:0; orphans:0; font-size:9pt">
@@ -2686,6 +2691,7 @@ u+.body .list_block ol {
     <p style="margin-top:0pt; margin-right:22.6pt; margin-bottom:0pt; line-height:normal; widows:0; orphans:0; font-size:9pt">
         <span style="font-family:'Arial Narrow'">&#xa0;</span>
     </p>
+    <div class="page-break"></div>
     <table cellspacing="0" cellpadding="0" style="margin-right:9pt; margin-left:9pt; border-collapse:collapse; float:left">
         <tr style="height:1pt">
             <td style="width:346.92pt; border-right-style:solid; border-right-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; vertical-align:top">
@@ -3873,7 +3879,7 @@ u+.body .list_block ol {
     <p style="margin-top:0pt; margin-right:22.6pt; margin-bottom:0pt; line-height:normal; widows:0; orphans:0; font-size:9pt">
         <span style="font-family:'Arial Narrow'">&#xa0;</span>
     </p>
-    
+    <div class="page-break"></div>
     <table cellspacing="0" cellpadding="0" style="width:517.78pt; margin-right:9pt; margin-left:9pt; border-collapse:collapse; float:left">
         <tr style="height:5.65pt">
             <td style="width:375.28pt; border-right-style:solid; border-right-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; vertical-align:top">
