--- a/views/public/html/SANGLOBE-contract.html
+++ b/views/public/html/SANGLOBE-contract.html
@@ -117,6 +117,7 @@ u+.body .list_block ol {
     <title>SANGLOBE Contract</title>
 </head>
 <body>
+    <div style="margin-left: 10px;margin-right: 10px;">
     <div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
 
 
@@ -138,20 +139,20 @@ u+.body .list_block ol {
     <div style="margin-top: 0pt; margin-bottom: 0pt; line-height: normal; font-size: 9pt;">
         <strong><span style="font-family: 'Arial Narrow';">NAUTILUS SHIPPING INDIA PVT LTD</span></strong>
     </div>
-    <div style="margin-top: 2pt; margin-bottom: 2pt; line-height: 115%; font-size: 8.5pt;">
+    <div style="margin-top: 2pt; margin-bottom: 2pt; line-height: 115%; font-size: 8px">
         <span style="font-family: 'Arial Narrow';">1</span>
         <span style="line-height: 115%; font-family: 'Arial Narrow'; font-size: 5.67pt;"><sup>st</sup></span>
         <span style="font-family: 'Arial Narrow';">&nbsp;</span>
         <span style="font-family: 'Arial Narrow';">Floor, Maalavika Centre, 144, Kodambakkam High Road, Nungambakkam, Chennai-600034</span>
     </div>
-    <div style="margin-top: 2pt; margin-bottom: 2pt; line-height: 115%; font-size: 8.5pt;">
+    <div style="margin-top: 2pt; margin-bottom: 2pt; line-height: 115%; font-size: 8px">
         <span style="line-height: 115%; font-family: 'Arial Narrow'; font-size: 8pt; color: #222a35;">A</span>
         <span style="font-family: 'Arial Narrow';">s Agents for the Owner</span>
     </div>
-    <div style="margin-top: 0pt; margin-bottom: 0pt; line-height: 115%; font-size: 8.5pt;">
+    <div style="margin-top: 0pt; margin-bottom: 0pt; line-height: 115%; font-size: 8px">
         <strong><span style="font-family: 'Arial Narrow';">SANGLOBE SHIPPING FZC</span></strong>
     </div>
-    <div style="margin-top: 0pt; margin-bottom: 0pt; line-height: 115%; font-size: 8.5pt;">
+    <div style="margin-top: 0pt; margin-bottom: 0pt; line-height: 115%; font-size: 8px">
         <span style="font-family: 'Arial Narrow';">Saif Office Q1 &ndash; 04- 089 / C, Dubai UAE</span>
         <span style="width: 20.01pt; font-family: 'Arial Narrow'; display: inline-block;">&nbsp;</span><br>
         <span style="font-family: 'Arial Narrow';">the owner of the vessel below stated and the employer herein (the &ldquo;Shipowner&rdquo;)</span>
@@ -318,28 +319,28 @@ u+.body .list_block ol {
                     </td>
                 </tr>
                 <tr>
-                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 8.5pt; ">
+                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 8px ">
                         <strong style="font-family: 'Arial Narrow';">Basic Monthly Wage</strong>
                     </td>
-                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 8.5pt; ">
+                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 8px ">
                         <strong style="font-family: 'Arial Narrow';">Fixed Overtime</strong>
                     </td>
-                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 9.5pt; ">
+                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size:8px; ">
                         <strong style="font-family: 'Arial Narrow';">Leave wage @8 days</strong>
                     </td>
-                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 8.5pt; ">
+                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 8px ">
                         <strong style="font-family: 'Arial Narrow';">Subsistence allowance</strong>
                     </td>
-                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 8.5pt; ">
+                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 8px ">
                         <strong style="font-family: 'Arial Narrow';">Uniform allowance</strong>
                     </td>
-                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 8.5pt; ">
+                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 8px ">
                         <strong style="font-family: 'Arial Narrow';">Special allowance</strong>
                     </td>
-                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 8.5pt; ">
+                    <td style="border-right: 1px solid #000; border-bottom: 1px solid #000; text-align: center; font-size: 8px ">
                         <strong style="font-family: 'Arial Narrow';">Other allowance</strong>
                     </td>
-                    <td style="border-bottom: 1px solid #000; text-align: center; font-size: 8.5pt; ">
+                    <td style="border-bottom: 1px solid #000; text-align: center; font-size: 8px ">
                         <strong style="font-family: 'Arial Narrow';">Total Wages</strong>
                     </td>
                 </tr>
@@ -435,8 +436,9 @@ u+.body .list_block ol {
             </tbody>
         </table>
         <div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
-
+    </div>
         <div class="page-break"></div>
+        <div style="margin-left: 30px;margin-right: 30px;margin-top: 20px;">
         <p style="margin-top:0pt; margin-bottom:10pt; text-align:center; line-height:115%; font-size:12pt;"><strong><span style="font-family:'Arial Narrow';">SEAFARER EMPLOYMENT AGREEMENT</span></strong></p>
         <p style="margin-top:0pt; margin-bottom:10pt; text-align:center; line-height:115%; font-size:12pt;"><span style="font-family:'Arial Narrow';">[Terms and Conditions]</span></p>
         <table cellspacing="0" cellpadding="0" style="margin-right: 9pt; border: 0.75pt solid rgb(0, 0, 0); border-collapse: collapse; float: right; width: 100%;">
@@ -786,6 +788,7 @@ u+.body .list_block ol {
         <p style="margin-top:0pt;  margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt;"><span style="font-family:'Arial Narrow';">17.4 Seafarers off duty shall be granted shore leave upon the vessel&rsquo;s arrival into port, except only when leaving the vessel is prohibited / restricted by relevant authorities of the port state or due to safety and /or operational reasons.</span></p>
         <p style="margin-top:0pt;  margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
         <p style="margin-top:0pt;  margin-bottom:0pt; text-align:justify; line-height:normal;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
+        <div class="page-break"></div>
         <p style="margin-top:0pt;  margin-bottom:0pt; text-align:justify; line-height:normal;"><strong><u><span style="font-family:'Arial Narrow';">18. PERSONAL PROTECTIVE EQUIPMENT</span></u></strong></p>
         <p style="margin-top:0pt;  margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
         <p style="margin-top:0pt;  margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10pt;"><span style="font-family:'Arial Narrow';">18.1</span><span style="width:12.94pt; font-family:'Arial Narrow'; display:inline-block;">&nbsp;</span><span style="font-family:'Arial Narrow';">The Company shall provide the necessary personal protective equipment in accordance with ISM/IMO regulations, or any applicable national regulations, which specify any additional equipment, for the use of each Seafarer while serving on board.</span></p>
