--- a/views/public/html/SANMARREGENT-contract.html
+++ b/views/public/html/SANMARREGENT-contract.html
@@ -28,10 +28,10 @@
 </head>
 <body >
 	<div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
-
+<div style="margin-left: 10px;margin-right: 10px;">
 	<div style="display: flex;justify-content:space-evenly;align-items: center;">
 		<span>Nemo ID : <span id="candidateId"></span></span>
-			<span>RPSL/CHN/012</span></p>
+			<span style="margin-left: 500px;">RPSL/CHN/012</span></p>
 		</span></span>
 		</div>
 		<div style="text-align: center;">
@@ -252,20 +252,21 @@
 				<tr>
 					<td><b>Date:</b> <input type="date" style="border: none;"></td>
 					<td style="border-right: 1px solid #000;"></td>
-					<td><b>Seafarer’s Name:</b> <input type="text" style="border: none;"></td>
+					<td><b>Seafarer’s Name:</b> <input type="text" style="border: none;"></td><br>
+					<td colspan="3"><b>Signature:</b> <input type="text" style="border: none;"></td>
+
 				</tr>
 				<tr>
-					<td colspan="3"><b>Signature:</b> <input type="text" style="border: none;"></td>
 				</tr>
 			</table>
 		</td>
 	</tr>
 </table>
 <div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
-
+</div>
 
 <div class="page-break"></div>
-
+<div style="margin-left: 30px;margin-right: 30px;">
 <p style="line-height: 115%; orphans: 2; widows: 2; margin-bottom: 0.14in">
 <font face="Calibri, serif"><font size="2" style="font-size: 11pt"><font face="Arial Narrow, serif"><font size="3" style="font-size: 12pt"><b>SEAFARER
 EMPLOYMENT AGREEMENT</b></font></font></font></font></p>
@@ -1037,6 +1038,7 @@ scale of compensation provided for under Article 15.3 shall be:</font></font></f
 
 </p>
 <p align="center" style=" orphans: 2; widows: 2; margin-left: 0.25in">
+	<div class="page-break"></div>
 <font face="Calibri, serif"><font size="2" style="font-size: 11pt"><font face="Arial Narrow, serif"><font size="2" style=font-size: 6pt"><u><b>SCHEDULE
 OF DISABILITY ALLOWANCES</b></u></font></font></font></font></p>
 <p align="center" style=" orphans: 2; widows: 2; margin-left: 0.25in">
@@ -1050,8 +1052,7 @@ OF DISABILITY ALLOWANCES</b></u></font></font></font></font></p>
 				<dl><dd>
 					<dl><dd>
 						<table width="269" cellpadding="7" cellspacing="0">
-							<col width="120"/>
-							<col width="119"/>
+							
 							<tr>
 								<td width="120" height="24" style="border: 1px solid #000000; padding: 0in 0.08in"><p align="center" style="orphans: 2; widows: 2">
 									<font face="Calibri, serif"><font size="2" style="font-size: 11pt"><font face="Arial Narrow, serif"><font size="2" style=font-size: 6pt">Degree
